_sass/kroxylicious.scss
@charset "utf-8";
// Required
@import "./bootstrap/scss/functions";

@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');

$font-family-sans-serif:
        "Questrial", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
        "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
        "Segoe UI Symbol", "Noto Color Emoji";

$kroxy-dark-green: #216869;
$kroxy-mid-green: #358471;
$kroxy-light-green: #49a078;
$kroxy-dark: #1f2421;
$kroxy-light: #dce1de;

$primary: $kroxy-light-green;
$secondary: $kroxy-dark-green;
$dark: $kroxy-dark;
$light: $kroxy-light;
$code-color: #b1266b;

@import "./bootstrap/scss/variables";
@import "./bootstrap/scss/variables-dark";

$navbar-dark-color: rgba($white, 0.75);
$navbar-dark-hover-color: rgba($white, 0.95);
$navbar-dark-active-color: rgba($white, 1);
$navbar-dark-disabled-color: rgba($white, 0.45);

@import "./bootstrap/scss/maps";

// Custom bootstrap variables must be set or imported *before* bootstrap.
@import "./bootstrap/scss/bootstrap";

body {
  height: fit-content!important;
}

a {
  color: $kroxy-dark-green;
}

.krx-content * {
  scroll-margin-top: 5rem!important;
}

.list-group-item:hover {
  background-color: tint-color($primary, 50%);
}

.krx-navbar {
  padding: 0.75rem 0;
  background-color: transparent;
  background: linear-gradient(to bottom, rgba($kroxy-dark, 1), rgba($kroxy-dark, 0.95));
  box-shadow: 0 0.5rem 1rem rgba($kroxy-dark, 0.15),inset 0 -1px 0 rgba($kroxy-light, 0.15);
}

.krx-gutter {
  --bs-gutter-x: 3rem
}

.krx-nav-link {
  color: rgba($white, 0.75);
}

.krx-nav-link.active {
  text-shadow: 0 0 1rem rgba($kroxy-light, 0.15);
}

.krx-card-nav-link {
  color: $kroxy-dark-green;
}

.krx-footer-license {
  justify-content: flex-end!important;
  margin-top: 1rem !important;
}

.krx-icon {
  height: 1.7rem;
  vertical-align: middle;
}

.krx-alert-content > p, .krx-alert-heading > p, .krx-card-nav-link > p {
  // this is to get around some icky behaviour from markdownify
  margin-bottom: 0;
}

.redhat-footer {
  background-color: $black;
  color: $white;
  font-size: .8rem;
  font-weight: 200;

  .grid-wrapper { 
    padding: .75rem 0; 
    display: flex;
    justify-content: space-between;

    @media screen and (max-width: 1200px) {
      justify-content: evenly;
    }

    @media screen and (max-width: 600px) {
      display: grid;
      padding-left: 1.5rem;
      padding-right: 1.5rem;
    }
  }

  .license {
    align-self: center;
  
    a {
      color: $white;
    }
  }

  .redhat-logo {
    align-self: center;
    padding-left: 2rem;
    
    img { width: 14rem; }

    @media screen and (max-width: 600px) {
    padding-top: .75rem;
    padding-bottom: 1rem;
    padding-left: 0;
    }
  }
}

// Rouge highlighter additional formatting
// Main rouge formatting is in css/code.css

// ensure padding for code blocks
.highlight {
  text-wrap: wrap;
  padding: 1.5em;
  border-radius: 4px;
}

div.highlighter-rouge {
  padding: 0 10px;
}

// Hero Styles

.krx-hero {
  background: rgb(73,160,120);
  background: linear-gradient(111deg, rgba(73,160,120,1) 0%, rgba(44,96,72,1) 30%, rgba(22,48,36,1) 100%);

  h1, p {
  color: $white !important;
  }
}

// Anchor Links

h2>a.anchor>span, h3>a.anchor>span, h4>a.anchor>span, h5>a.anchor>span, h6>a.anchor>span {
  font-family: bootstrap-icons!important;
  color: rgba($primary, 0);
  display: block;
  margin-left: -1.5ex;
  position: absolute;
  text-decoration: none !important;
  visibility: hidden;
  z-index: 2;
  transition:
          visibility 1ms linear,
          color 200ms ease-in-out;
}

h2>a.anchor>span::before, h3>a.anchor>span::before, h4>a.anchor>span::before, h5>a.anchor>span::before, h6>a.anchor>span::before {
  content: "\f470";
}

h2:hover>a.anchor>span, h3:hover>a.anchor>span, h4:hover>a.anchor>span, h5:hover>a.anchor>span, h6:hover>a.anchor>span {
  visibility: visible;
  color: rgba($primary, 1);
}

h2:hover>a.anchor>span:hover, h3:hover>a.anchor>span:hover, h4:hover>a.anchor>span:hover, h5:hover>a.anchor>span:hover, h6:hover>a.anchor>span:hover {
  color: rgba($secondary, 1);
}

